--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/AppTemplates.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/AppTemplates.razor
@@ -3,7 +3,7 @@
 @layout WorkbenchLayout
 
 @inject IMessageService Message
-@inject ComponentStateWrapper<AppTemplates, IList<AppPartsSchema>> AppPartsState
+@inject ComponentState<AppTemplates, IList<AppPartsSchema>> AppPartsState
 
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 5px;">
     <div style="width:250px;">
@@ -33,19 +33,21 @@
 </Card>
 
 @code {
+    private IList<AppPartsSchema> _appParts;
 
     protected override async Task OnInitializedAsync()
     {
-        if (AppPartsState.Value is null)
-        {
-            AppPartsState.Value = await LoadAppPartsAsync(1, 50);
+        await base.OnInitializedAsync();
 
-            await base.OnInitializedAsync();
-        }
+        _appParts = await AppPartsState.GetOrAddAsync(this, async () =>
+        {
+            return await LoadAppPartsAsync(1, 50);
+        });
     }
 
     private async Task<IList<AppPartsSchema>> LoadAppPartsAsync(int pageIndex, int pageSize)
     {
+        await Task.Delay(100);
         IList<AppPartsSchema> result = [];
         return result;
     }
