--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentPartsList.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentPartsList.razor
@@ -3,7 +3,7 @@
 @layout WorkbenchLayout
 
 @inject IMessageService Message
-@inject ComponentStateWrapper<ComponentPartsList, IList<ComponentPartsListModel>> PageListState
+@inject ComponentState<ComponentPartsList, IList<ComponentPartsListModel>> ComponentPartsListState
 
 <div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
     <div style="width:250px;">
@@ -14,7 +14,7 @@
     </div>
 </div>
 
-<Table TItem="ComponentPartsListModel" DataSource="@PageListState.Value" PageSize="15" PageIndex="1" Total="_total"
+<Table TItem="ComponentPartsListModel" DataSource="@_componentPartsList" PageSize="15" PageIndex="1" Total="_total"
 @bind-SelectedRows="selectedRows" Style="height:100%;" RowKey="c=>c.Id">
     <PropertyColumn Title="ID" Property="c=>c.Id" Width="300" />
     <PropertyColumn Title="组件名称" Property="c=>c.Name" Sortable />
@@ -62,17 +62,18 @@
 
     private bool _visible = false;
     private Form<ComponentPartsSchema> _form;
+    private IList<ComponentPartsListModel> _componentPartsList;
     private ComponentPartsSchema _partsSchema = new ComponentPartsSchema();
 
     protected override async Task OnInitializedAsync()
     {
-        _total = 50;
-        if (PageListState.Value is null)
-        {
-            PageListState.Value = await LoadComponentPartsAsync(1, 50);
+        await base.OnInitializedAsync();
 
-            await base.OnInitializedAsync();
-        }
+        _total = 50;
+        _componentPartsList = await ComponentPartsListState.GetOrAddAsync(this, async () =>
+        {
+            return await LoadComponentPartsAsync(1, 50);
+        });
     }
 
     private async Task<IList<ComponentPartsListModel>> LoadComponentPartsAsync(int pageIndex, int pageSize)
@@ -136,7 +137,7 @@
 
     private async Task OnFinishAsync()
     {
-        PageListState.Value = await LoadComponentPartsAsync(1, 50);
+        _componentPartsList = await LoadComponentPartsAsync(1, 50);
     }
 
     private async Task<bool> SaveComponentPartsSchemaAsync()
