- 定义 FromDataDTO、FromDataEntity 对象 - 实现 EFCore 动态实体的增删改, 动态实体生成细节完善 - 实现表单页页面渲染、数据加载调用链路(存在问题待修复)

--- a/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -28,6 +28,8 @@
         {
             return LoadRootComponent();
         });
+        //考虑预呈现场景,重新保存 rootComponent
+        DragDropStateService.SetRootComponent(PageCascading.AppId, PageCascading.PageId, _rootComponent);
     }
 
     private ComponentSchema LoadRootComponent()
@@ -37,7 +39,6 @@
         {
             rootComponent = new ComponentSchema("root");
             rootComponent.Refresh = StateHasChanged;
-            DragDropStateService.SetRootComponent(PageCascading.AppId, PageCascading.PageId, rootComponent);
         }
         return rootComponent;
     }
