--- a/src/RenderEngine/H.LowCode.RenderEngine/_Imports.razor
+++ b/src/RenderEngine/H.LowCode.RenderEngine/_Imports.razor
@@ -4,5 +4,6 @@
 @using System.Net.Http.Json
 @using H.LowCode.ComponentBase
 @using H.LowCode.RenderEngine
+@using H.LowCode.RenderEngine.Application.Contracts
 @using H.LowCode.MetaSchema
 @using H.LowCode.Model
