--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Index.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Index.razor
@@ -67,7 +67,7 @@
                         <a href="designer/caseapp/g0qcqxzd" target="_blank">页面设计器 (基础列表)</a>
                     </p>
                     <p>
-                        <a href="designer/caseapp/f5b76e98-342f-46c3-96d6-17693857231d" target="_blank">页面设计器 (基础表单)</a>
+                        <a href="designer/caseapp/fhumgxyk" target="_blank">页面设计器 (基础表单)</a>
                     </p>
                 </GridCol>
             </GridRow>
@@ -78,7 +78,10 @@
                         <a href="https://localhost:5191/caseapp/g0qcqxzd" target="_blank">页面渲染 (基础列表)</a>
                     </p>
                     <p>
-                        <a href="https://localhost:5191/caseapp/f5b76e98-342f-46c3-96d6-17693857231d" target="_blank">页面渲染 (基础表单)</a>
+                        <a href="https://localhost:5191/caseapp/fhumgxyk" target="_blank">页面渲染 (基础表单-新增)</a>
+                    </p>
+                    <p>
+                        <a href="https://localhost:5191/caseapp/fhumgxyk?id=123" target="_blank">页面渲染 (基础表单-修改)</a>
                     </p>
                 </GridCol>
             </GridRow>
