--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/ComponentRender/ComponentRender.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/ComponentRender/ComponentRender.razor
@@ -1,23 +1,46 @@
-﻿@namespace H.LowCode.DesignEngine
+﻿@namespace H.LowCode.ThemeParts.AntBlazor
 @inherits LowCodeComponentBase
-
-@if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
-{
-    <div class="designengine-componentitem-title">@Component.ComponentProperty.Title ：</div>
-}
 
 @if (Component.IsContainerComponent)
 {
-    <div class="designengine-componentitem-div-container">@_renderFragment</div>
+    <ContainerComponentRender ContainerComponent="@Component"></ContainerComponentRender>
 }
 else
 {
-    <div class="designengine-componentitem-div-component">@_renderFragment</div>
+    <div class="renderengine-componentitem-box" style="float:left;
+        position:@Component.ComponentStyle.Position;
+        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? 24/PageCascading.PageLayout : 24))  /24 * 100)%;
+        min-width:85px; min-height: @(Component.ComponentStyle.ItemHeight)px;
+        @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle">
+
+        @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
+        {
+            <div class="renderengine-componentitem-title">@Component.ComponentProperty.Title ：</div>
+        }
+
+        @if (Component.IsContainerComponent)
+        {
+            <div class="renderengine-componentitem-div-container">@_renderFragment</div>
+        }
+        else
+        {
+            <div class="renderengine-componentitem-div-component">@_renderFragment</div>
+        }
+    </div>
 }
 
 @code {
     [Parameter]
     public ComponentSchema Component { get; set; }
+
+    [CascadingParameter(Name = "pageCascading")]
+    public PageCascadingModel PageCascading{ get; set; }
+
+    /// <summary>
+    /// 当前组件是否在根容器内
+    /// </summary>
+    [Parameter]
+    public bool IsInRootContainer { get; set; }
 
     private RenderFragment _renderFragment;
 
@@ -32,8 +55,6 @@ else
     {
         if (Component == null)
             throw new NullReferenceException(nameof(Component));
-
-        Component.ComponentProperty.Name = $"{Component.ComponentName}_{Random.Shared.Next(100, 999)}";
 
         _renderFragment = RenderComponent();
     }
