--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/Pages/MetaPage.razor
@@ -4,7 +4,7 @@
 @layout AntBlazorThemeLayout
 
 @inject IMetaAppService MetaAppService
-@inject ComponentState<MetaPage, PageSchema> State
+@* @inject ComponentState<MetaPage, PageSchema> State *@
 
 <PageTitle>@($"{_pageCascadingModel.PageName}")</PageTitle>
 
