关闭预呈现: 当前虽然可以实现将预呈现的数据持久化, 但预呈现后到 Server 建立 WebSocket 连接之前的时间段内, 页面处于 "不可交互" 状态, 使页面看上去为 假死 状态, 影响使用体验。

--- a/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Host/Components/App.razor
@@ -21,12 +21,12 @@
 
     <link href="@Assets["manifest.json"]" rel="manifest" />
 
-    <HeadOutlet @rendermode="@InteractiveAuto" />
+    <HeadOutlet @rendermode="@(new InteractiveAutoRenderMode(prerender: false))" />
     <ImportMap />
 </head>
 
 <body>
-    <Routes @rendermode="@InteractiveAuto" />
+    <Routes @rendermode="@(new InteractiveAutoRenderMode(prerender: false))" />
     
     <script src="_framework/blazor.web.js"></script>
 </body>
