--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/ComponentRender/FormComponentRender.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/ComponentRender/FormComponentRender.razor
@@ -7,28 +7,20 @@
 }
 else
 {
-    <FormItem Name="@Component.ComponentProperty.Name">
-        <div class="renderengine-componentitem-box" style="float:left;
-            position:@Component.ComponentStyle.Position;
-            width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? 24/PageCascading.PageLayout : 24))  /24 * 100)%;
-            min-width:85px; min-height: @(Component.ComponentStyle.ItemHeight)px;
-            @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle">
+    <div class="renderengine-componentitem-box" style="float:left;
+        position:@Component.ComponentStyle.Position;
+        width: @((Component.ComponentStyle.ItemWidth ?? (IsInRootContainer ? 24/PageCascading.PageLayout : 24))  /24 * 100)%;
+        min-width:85px; min-height: @(Component.ComponentStyle.ItemHeight)px;
+        @Component.ComponentStyle.DefaultStyle @Component.ComponentStyle.CustomStyle">
+        
+        <FormItem Name="@Component.ComponentProperty.Name"
+                Label="@(Component.IsHiddenTitle ? string.Empty : Component.ComponentProperty.Title)"
+                Style="width:100%">
 
-            @if (Component.IsHiddenTitle == false && Component.IsContainerComponent == false)
-            {
-                <div class="renderengine-componentitem-title">@Component.ComponentProperty.Title ：</div>
-            }
+            <div class="renderengine-componentitem-div-component">@_renderFragment</div>
 
-            @if (Component.IsContainerComponent)
-            {
-                <div class="renderengine-componentitem-div-container">@_renderFragment</div>
-            }
-            else
-            {
-                <div class="renderengine-componentitem-div-component">@_renderFragment</div>
-            }
-        </div>
-    </FormItem>
+        </FormItem>
+    </div>
 }
 
 @code {
