--- a/src/Parts/H.LowCode.ThemeParts.AntBlazor/PageRender/FormPageRender.razor
+++ b/src/Parts/H.LowCode.ThemeParts.AntBlazor/PageRender/FormPageRender.razor
@@ -5,14 +5,15 @@
 
 @if (formDTO != null)
 {
-    <Form Model="@formDTO.Fields" OnFinish="OnFinish" OnFinishFailed="OnFinishFailed"
+    <Form Model="@formDTO.Fields" @ref="@_form"
+    OnFinish="OnFinishAsync" OnFinishFailed="OnFinishFailed"
     LabelColSpan="8" WrapperColSpan="16" ValidateOnChange>
         @foreach (var component in Page.Components)
         {
             <FormComponentRender Component="@component" IsInRootContainer="true"></FormComponentRender>
         }
 
-        <FormItem WrapperColOffset="8" WrapperColSpan="16">
+        <FormItem WrapperColOffset="8" WrapperColSpan="16" Style="clear:both;">
             <Button Type="@ButtonType.Primary" HtmlType="submit">
                 保存
             </Button>
@@ -27,18 +28,40 @@
     [Parameter]
     public PageSchema Page { get; set; }
 
-    public string Id => GetQueryValue("id");
-
+    private Form<Dictionary<string, object>> _form;
+    private string Id => GetQueryValue("id");
     private FormDataDTO formDTO;
 
     protected override async Task OnInitializedAsync()
     {
         formDTO = await FormDataAppService.GetAsync(Page.AppId, Page.Id, Id);
+        formDTO = new FormDataDTO()
+            {
+                Fields = {
+                    ["f_id"] = "123",
+                    ["f_field1"] = "字段1",
+                    ["f_field2"] = 2,
+                    ["f_field3"] = "字段3",
+                    ["f_field4"] = true,
+                    ["f_field5"] = 5,
+                    ["f_field6"] = "字段6",
+                    ["f_field7"] = "字段7",
+                    ["f_field8"] = "字段8",
+                    ["f_field9"] = true,
+                    ["f_field10"] = DateTime.Parse("2024/11/30 18:46:00"),
+                    ["f_field11"] = "字段11",
+                    ["f_field12"] = "字段12",
+                    ["CreatedTime"] = DateTime.Parse("2024/11/30 18:46:00"),
+                    ["CreatedUser"] = null,
+                    ["ModifiedTime"] = DateTime.Parse("2024/11/30 18:46:00"),
+                    ["ModifiedUser"] = null
+                }
+            };
     }
 
-    private void OnFinish(EditContext editContext)
+    private async Task OnFinishAsync()
     {
-
+        await FormDataAppService.SaveAsync(formDTO);
     }
 
     private void OnFinishFailed(EditContext editContext)
