--- a/src/DesignEngine/H.LowCode.PartsDesignEngine/Layout/PartsDesignEngineLayout.razor
+++ b/src/DesignEngine/H.LowCode.PartsDesignEngine/Layout/PartsDesignEngineLayout.razor
@@ -4,7 +4,7 @@
 <link href="@Assets["_content/H.LowCode.PartsDesignEngine/partsdesignengine.css"]" rel="stylesheet" />
 
 <Layout Class="layout" Style="height:100%;">
-    <Content Style="height:100%;" @rendermode="new InteractiveAutoRenderMode(false)">
+    <Content Style="height:100%;">
         @Body
     </Content>
 </Layout>
