--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem.razor
@@ -1,24 +1,31 @@
-﻿@page "/workbench/ecosystem"
+﻿@page "/workbench/ecosystem/{Tab?}"
 @namespace H.LowCode.Workbench
 @inherits LowCodePageComponentBase
 @layout WorkbenchLayout
 
 <PageTitle>生态中心 - H.LowCode</PageTitle>
 
-<Tabs DefaultActiveKey="tab_market_app" Centered Animated Style="width: 80%; margin: auto;">
-    <TabPane Tab="模板应用" Key="tab_parts_apps">
+<Tabs DefaultActiveKey="apps" ActiveKey="@_tabKey" Centered Animated Style="width: 80%; margin: auto;">
+    <TabPane Tab="应用模板" Key="apps">
         <AppTemplates></AppTemplates>
     </TabPane>
-    <TabPane Tab="主题物料" Key="tab_parts_themes">
+    <TabPane Tab="主题" Key="themes">
         <ThemePartsList></ThemePartsList>
     </TabPane>
-    <TabPane Tab="页面物料" Key="tab_parts_pages">
+    <TabPane Tab="组件库" Key="componentlibraries">
+        @if (string.IsNullOrEmpty(LibraryId))
+        {
+            <ComponentLibraryList></ComponentLibraryList>
+        }
+        else
+        {
+            <ComponentPartsList LibraryId="@LibraryId"></ComponentPartsList>
+        }
+    </TabPane>
+    <TabPane Tab="页面库" Key="pages">
         <PagePartsList></PagePartsList>
     </TabPane>
-    <TabPane Tab="组件物料" Key="tab_parts_components">
-        <ComponentPartsList></ComponentPartsList>
-    </TabPane>
-    <TabPane Tab="API 库" Key="tab_market_apis">
+    <TabPane Tab="API 库" Key="apis">
         <Card Title="钉钉 API" Style="float:left; width:300px; margin:5px;">
             <Extra>
                 <a href="#">查看</a>
@@ -28,7 +35,7 @@
             </Body>
         </Card>
     </TabPane>
-    <TabPane Tab="插件" Key="tab_market_plugins">
+    <TabPane Tab="插件" Key="plugins">
         <Card Title="微信支付" Style="float:left; width:300px; margin:5px;">
             <Extra>
                 <a href="#">安装</a>
@@ -65,5 +72,10 @@
 </Tabs>
 
 @code {
+    [Parameter]
+    public string Tab { get; set; }
 
+    private string LibraryId => GetQueryValue("libId");
+
+    private string _tabKey => Tab ?? "apps";
 }
