--- a/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentLibraries/ComponentPartsList.razor
+++ b/src/DesignEngine/H.LowCode.Workbench/Pages/Ecosystem/ComponentLibraries/ComponentPartsList.razor
@@ -6,13 +6,17 @@
 @inject IMessageService Message
 @inject ComponentState<ComponentPartsList, IList<ComponentPartsListModel>> ComponentPartsListState
 
-<div style="display: flex; justify-content: space-between; margin: 0 0 8px 0;">
-    <div style="width:250px;">
+<div style="margin: 0 0 8px 0;">
+    <div style="width:60px; float: left;">
+        <a href="@("/workbench/ecosystem/componentlibraries")"><Icon Type="rollback" />返回</a>
+    </div>
+    <div style="width:250px; float: left;">
         <Search Placeholder="组件名称" OnSearch="()=>{}" />
     </div>
-    <div style="width:80px; line-height:32px; margin: 0 8px 0 0;">
+    <div style="width:80px; float: right; line-height:32px; margin: 0 8px 0 0;">
         <Button Type="@ButtonType.Primary" OnClick="@(()=> CreateAsync())">新建组件</Button>
     </div>
+    <div style="clear:both;"></div>
 </div>
 
 <Table TItem="ComponentPartsListModel" DataSource="@_componentPartsList" PageSize="15" PageIndex="1" Total="_total"
@@ -151,6 +155,9 @@
 </Modal>
 
 @code {
+    [Parameter]
+    public string LibraryId { get; set; }
+
     IEnumerable<ComponentPartsListModel> selectedRows;
     int _total = 0;
 
@@ -174,12 +181,12 @@
 
     private async Task<IList<ComponentPartsListModel>> LoadComponentPartsAsync(int pageIndex, int pageSize)
     {
-        return await ComponentPartsAppService.GetListAsync("antdesign");
+        return await ComponentPartsAppService.GetListAsync(LibraryId);
     }
 
     private async Task<ComponentPartsSchema> GetComponentPartsAsync(string componentPartsId)
     {
-        return await ComponentPartsAppService.GetByIdAsync("antdesign", componentPartsId);
+        return await ComponentPartsAppService.GetByIdAsync(LibraryId, componentPartsId);
     }
 
     private void CreateAsync()
@@ -208,7 +215,7 @@
 
     private async Task DeleteAsync(string componentPartsId)
     {
-        await ComponentPartsAppService.DeleteAsync("antdesign", componentPartsId);
+        await ComponentPartsAppService.DeleteAsync(LibraryId, componentPartsId);
 
         await Message.Success("删除成功！");
     }
